# blink

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.zig
.github/workflows/: publish.yml  release.yml
.zig-cache/o/5db694d9fbbf809c5280336c79218a00/: test
.zig-cache/o/fa685c2daf08b7cdb7658faa431d721c/: test
deprecated/zig_core/: protocol.zig  test_io.zig  vsock.zig
deprecated/zig_core/backends/: krun_backend.zig
docs/: COMMUNICATION_ARCH.md  OUTPUT_STREAMING.md  PRODUCT.md  PTY.md  REATTACH.md  STREAMING.md  VHUB.md  XENSEMBLE.md
examples/python/: blink_sdk.py  guest_agent.py  test_box.py
examples/python/blink/: __init__.py  box.py
src/: blink.zig  blink_sdk.py  guest_agent.py  hypervisor.zig  init.zig  libkrun.zig  main.rs  main.zig  path_translator.zig  protocol.zig  vsock.zig
src/backends/: krun_backend.zig  qemu_backend.zig
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/core/: Cargo.toml
src/core/src/: boxlite_options.rs  context.rs  exec.rs  lib.rs  network.rs  pty.rs  runner.rs  session.rs  tier.rs  vhub.rs
src/hypervisor/: container.rs  mod.rs  qemu.rs
src/protocol/: mod.rs
src/server/: Cargo.toml
src/server/src/: exec_registry.rs  jobs.rs  main.rs  state.rs
src/server/src/api/: error.rs  exec.rs  mod.rs  runs.rs  sessions.rs
src/shared/: Cargo.toml
src/shared/src/: lib.rs
src/vsock/: mod.rs
tests/: test_arraylist.zig  test_arraylist2.zig  test_environ.zig  test_vsock.zig
web/: index.html  style.css
