[workspace]
members = ["src/shared", "src/core", "src/cli", "src/server"]
resolver = "2"

[workspace.dependencies]
boxlite = { version = "0.9.5", default-features = false, features = [
    "embedded-runtime",
    "krunfw",
    "e2fsprogs",
    "bubblewrap",
] }
boxlite-shared = "0.9.5"
blink-shared = { path = "src/shared", version = "0.3.3", package = "blinkvm-shared" }
blink-sdk = { path = "src/core", version = "0.3.3", package = "blinkvm-sdk" }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tempfile = "3.8"
dirs = "5.0"
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[workspace.package]
version = "0.3.3"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Blink Contributors"]
repository = "https://github.com/EeroEternal/blink"
homepage = "https://github.com/EeroEternal/blink"
documentation = "https://docs.rs/blinkvm-sdk"
keywords = ["sandbox", "vm", "agent", "isolation", "boxlite"]
categories = ["virtualization", "development-tools"]
