[package]
name = "blink-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Blink CLI — secure AI agent sandbox powered by BoxLite"

[[bin]]
name = "blink-cli"
path = "src/main.rs"

[dependencies]
blink-sdk = { workspace = true }
blink-shared = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
