[package]
name = "blink-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust SDK for Blink agent sandboxes — BoxLite VM execution, sessions, and V-Hub"
readme = "../../README.md"

[lib]
name = "blink_sdk"
path = "src/lib.rs"

[dependencies]
blink-shared = { workspace = true }
boxlite = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }

[package.metadata.docs.rs]
all-features = false
