[package]
name = "blink-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Blink web API and console for sandbox run requests"

[[bin]]
name = "blink-server"
path = "src/main.rs"

[dependencies]
blink-sdk = { workspace = true }
blink-shared = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart", "ws"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }
futures = { workspace = true }
